--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,9 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
 
+  #Accessing the sqlite database
+  sqflite: ^1.1.0
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
