--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,7 +46,8 @@ flutter:
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.io/assets-and-images/#resolution-aware.
-
+  assets:
+    - lib/media/
   # For details regarding adding assets from package dependencies, see
   # https://flutter.io/assets-and-images/#from-packages
 
